Integrate more simple Jekyll features

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html>
-    <head>
-      <title>Singular Dream</title>
-    </head>
-    <body>
-      <div>Some text<div>
-    </body>
-  </html>
+---
+permalink: /
+layout: default
+description: A starter project for GitHub Pages with Jekyll
+title: Index GitHub Pages Jekyll Starter
+---
+<p>
+  This is a starter project for GitHub Pages
+</p>
